flapivor/tests/tests-m3/hopix/typechecker/bad/multipatterns.hopix
type t () = A
type u () = S (u ()) | T (int)

val x : int = S (A) ? {
| S (A | B)  => 0
| (_ : u ()) => 1
}